Update What's the Weather.ipynb

--- a/What's the Weather.ipynb
+++ b/What's the Weather.ipynb
@@ -28,7 +28,7 @@
     "# request_type = 'forecast?'\n",
     "\n",
     "# API Key for Open Weather Map dot Org\n",
-    "API_key = '&appid='\n",
+    "API_key = '&appid=YOUR_APP_ID_GOES_HERE'\n",
     "# The Weather Unit System\n",
     "unit_system = '&units=Imperial'\n",
     "\n",
